--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     />
   </head>
 
-  <body>
+  <body style="background: #da2d29">
     <div id="root"></div>
     <script
       type="module"
