--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     />
   </head>
 
-  <body style="background: #da2d29">
+  <body style="background: #84b792">
     <div id="root"></div>
     <script
       type="module"
